# weather

./: CMakeLists.txt  README.md
.github/workflows/: build-ubuntu.yml  build.yml
src/headers/: ArgumentsParser.hpp  WeatherSettings.hpp  application.hpp  client.hpp  network.hpp
src/sources/: ArgumentsParser.cpp  WeatherSettings.cpp  application.cpp  client.cpp  main.cpp  network.cpp
